LPS-91803 use contentSpaceId
