# modules/apps/data-engine/data-engine-rest-impl/rest-openapi.yaml
@@ -17,7 +17,7 @@ components:
                     items:
                         $ref: '#/components/schemas/LocalizedValue'
                     type: array
-                groupId:
+                contentSpaceId:
                     format: int64
                     type: integer
                 id:
@@ -105,7 +105,7 @@ paths:
                   schema:
                       type: integer
                 - in: query
-                  name: groupId
+                  name: contentSpaceId
                   required: true
                   schema:
                       format: int64
@@ -123,7 +123,7 @@ paths:
         post:
             parameters:
                 - in: query
-                  name: groupId
+                  name: contentSpaceId
                   required: true
                   schema:
                       format: int64
@@ -155,7 +155,7 @@ paths:
                   schema:
                       type: integer
                 - in: query
-                  name: groupId
+                  name: contentSpaceId
                   required: true
                   schema:
                       format: int64
@@ -242,7 +242,7 @@ paths:
                   schema:
                       type: integer
                 - in: query
-                  name: groupId
+                  name: contentSpaceId
                   required: true
                   schema:
                       format: int64
@@ -260,7 +260,7 @@ paths:
         post:
             parameters:
                 - in: query
-                  name: groupId
+                  name: contentSpaceId
                   required: true
                   schema:
                       format: int64
@@ -344,7 +344,7 @@ paths:
                   schema:
                       type: integer
                 - in: query
-                  name: groupId
+                  name: contentSpaceId
                   required: true
                   schema:
                       format: int64
